--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "5.6",
+        "php": "^5.6",
         "yiisoft/yii2": "~2.0.0"
     },
     "autoload": {
